@startuml

title __ID568441's Class Diagram__\n

  namespace de.ostfalia.practice.id568441 {
    class de.ostfalia.practice.id568441.Getraenk {
        - alkgehalt : double
        - kalorien : int
        - kohlensaeure : boolean
        - volumen : double
        + Getraenk()
        + getAlkgehalt()
        + getKalorien()
        + getVolumen()
        + isKohlensaeure()
        + setAlkgehalt()
        + setKalorien()
        + setKohlensaeure()
        + setVolumen()
        + toString()
    }
  }
  

  namespace de.ostfalia.practice.id568441 {
    class de.ostfalia.practice.id568441.Kleidung {
        + Kleidung()
    }
  }
  

  namespace de.ostfalia.practice.id568441 {
    enum groesse {
      L
      M
      S
      XL
      XS
      XXL
    }
  }
  

  namespace de.ostfalia.practice.id568441 {
    class de.ostfalia.practice.id568441.Lebensmittel {
        - gewicht : double
        - kalorien : int
        + Lebensmittel()
        + getGewicht()
        + getKalorien()
        + setGewicht()
        + setKalorien()
        + toString()
    }
  }
  

  namespace de.ostfalia.practice.id568441 {
    class de.ostfalia.practice.id568441.Spiel {
        + Spiel()
    }
  }
  

  namespace de.ostfalia.practice.id568441 {
    enum typ {
      BRETT
      KARTE
      VIDEO
    }
  }
  

  namespace de.ostfalia.practice.id568441 {
    abstract class de.ostfalia.practice.id568441.Ware {
        - altersfreigabe : short
        - artikelnummer : int
        - hersteller : String
        - name : String
        - preis : double
        + Ware()
        + getAltersfreigabe()
        + getArtikelnummer()
        + getHersteller()
        + getName()
        + getPreis()
        + setAltersfreigabe()
        + setArtikelnummer()
        + setHersteller()
        + setName()
        + setPreis()
        + toString()
    }
  }
  

  namespace de.ostfalia.practice.id568441 {
    class de.ostfalia.practice.id568441.supermarkt {
    }
  }
  

  de.ostfalia.practice.id568441.Getraenk -up-|> de.ostfalia.practice.id568441.Ware
  de.ostfalia.practice.id568441.Kleidung -up-|> de.ostfalia.practice.id568441.Ware
  de.ostfalia.practice.id568441.Kleidung +-down- de.ostfalia.practice.id568441.Kleidung.groesse
  de.ostfalia.practice.id568441.Lebensmittel -up-|> de.ostfalia.practice.id568441.Ware
  de.ostfalia.practice.id568441.Spiel -up-|> de.ostfalia.practice.id568441.Ware
  de.ostfalia.practice.id568441.Spiel +-down- de.ostfalia.practice.id568441.Spiel.typ
  de.ostfalia.practice.id568441.Ware -up-|> de.ostfalia.practice.id568441.supermarkt


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
